fixed bg music button z-index

--- a/css/view.css
+++ b/css/view.css
@@ -55,6 +55,7 @@ body {
 	right: 5px;
 	top: 110px;
 	font-size: 12pt;
+	z-index: 10;
 }
 
 
